--- a/firstitr/pytest.ini
+++ b/firstitr/pytest.ini
@@ -8,6 +8,8 @@ addopts =
     --verbose
     --tb=short
     --strict-markers
+    --reuse-db
+    --nomigrations
     --cov=myapp
     --cov-report=html
     --cov-report=term-missing
