--- a/firstitr/requirements-test.txt
+++ b/firstitr/requirements-test.txt
@@ -1,8 +1,24 @@
-# Testing requirements
-pytest>=7.0.0
-pytest-django>=4.5.0
-pytest-mock>=3.10.0
-pytest-cov>=4.0.0
-requests-mock>=1.10.0
-factory-boy>=3.2.0
-freezegun>=1.2.0
+"""
+Test dependencies for the Django project
+"""
+# Testing framework
+pytest==7.4.3
+pytest-django==4.7.0
+pytest-mock==3.12.0
+pytest-cov==4.1.0
+
+# Django testing utilities  
+django-test-plus==2.2.2
+factory-boy==3.3.0
+
+# Mock and fixture libraries
+responses==0.24.1
+freezegun==1.2.2
+
+# Code quality and linting
+flake8==6.1.0
+black==23.11.0
+isort==5.12.0
+
+# Coverage reporting
+coverage==7.3.2
